--- a/cv.html
+++ b/cv.html
@@ -121,7 +121,7 @@
 <body>
     <div class="container gap-2">
         <div class="col-4" id="container1">
-            <div id="block"> <img src="./icons/IMG_0381.jpeg" alt="the CHUXIS!!" id="img1"></div>
+            <div id="block"> <img src="" alt="" id="img1"></div>
             <div id="name">
                 
                 <h1>
